avanzando con yardsale

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Bienvenido</h1>
-<app-counter />
-<app-formu />
+<!-- <h1>Bienvenido</h1> -->
+<!-- <app-counter />
+<app-formu /> -->
+<app-nav [user]="{email:'Christian@gmail.com'}" />
+<app-catalogo />
