--- a/src/app/products/nav/nav.component.scss
+++ b/src/app/products/nav/nav.component.scss
@@ -1,4 +1,4 @@
-@import '../../variables';
+@use '../../variables';
 
 .web-view{
   display: flex;
@@ -15,25 +15,6 @@
     display: flex;
     flex-direction: row;
   }
-  ul{
-    display:flex;
-    list-style: none ;
-    width: fit-content;
-    gap: 7px;
-    li{
-      a{
-        text-decoration: none;
-        color: $Very-light-pink;
-        padding: 4px;
-        border: solid 1px transparent;
-        border-radius: 2px;
-        &:hover{
-          color: $Hospital-green;
-          border: 1px solid $Hospital-green;
-        }
-      }
-    }
-  }
 }
 .mobile-view{
   display: none;
@@ -48,12 +29,25 @@
     justify-content: space-between;
     .side-menu{
       position: fixed;
+      z-index: 1000;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: $White;
+      background-color: variables.$White;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      transform: translateX(-100%);
+      transition: all ease-out .5s;
+      &.active{
+        transform: translateX(0%);
+      }
 
     }
   }
 }
+
