--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,13 +1,13 @@
 <mat-card class="ProductCard">
   <mat-card-header>
     <div mat-card-avatar class="Card-header-image"></div>
-    <mat-card-title>{{P.title}}</mat-card-title>
-    <mat-card-subtitle>{{P.price}}</mat-card-subtitle>
+    <mat-card-title>{{P.title | strNums}}</mat-card-title>
+    <mat-card-subtitle>{{P.price | currency: 'USD':'symbol'}}</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image [src]="P.image" [alt]="P.title">
   <mat-card-content>
     <p>
-      {{P.price}}
+      {{P.price}} {{today | timeAgo}}
     </p>
   </mat-card-content>
   <mat-card-actions>
